fixed Playback, actual swagger.json
