# root/handlers/playback.py
@@ -7,6 +7,24 @@ from root.handlers import BaseHandler
 
 class PlaybackHandler(BaseHandler):
 
-    async def delete(self, id_):
-        self.ms.delete_playback(id_)
-        await self.send_ok()
+    async def post(self):
+        try:
+            timeslot = models.TimeSlot(
+                self.json_args.get('from_time'),
+                self.json_args.get('to_time'),
+                self.json_args.get('locked'),
+            )
+            creative = models.Playback(
+                self.json_args.get('adspot_id'),
+                None,
+                self.json_args.get('creative_id'),
+                self.json_args.get('status_id'),
+                self.json_args.get('smart_contract'),
+                self.json_args.get('play_price'),
+                None,
+            )
+        except TypeError as e:
+            await self.send_failed(str(e))
+        else:
+            self.ms.add_playback_timeslot(timeslot, creative)
+            await self.send_ok()
